# fastapi-project

./: .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml
docs/adrs/: 2023_07_20_SQLModel_over_DAO.md  TEMPLATE.md
fastapi_project/: config.py
fastapi_project/adapters/: checkout_provider.py  stripe_provider.py  third_party_provider.py  third_party_provider_selector.py
fastapi_project/domain/: order.py  order_factory.py  wallet.py
fastapi_project/domain/order/: order.py  order_factory.py
fastapi_project/domain/wallet/: wallet.py
fastapi_project/repositories/: database.py  factory.py  in_memory_order.py  order.py  types.py
fastapi_project/repositories/order/: base.py  in_memory.py  sqlite.py
fastapi_project/routes/: orders.py
fastapi_project/usecases/: create_order.py
tests/: conftest.py
tests/integration/repositories/: test_sqlite.py
tests/integration/routes/: test_orders.py
tests/routes/: test_orders.py
tests/unit/adapters/: test_third_party_provider.py  test_third_party_provider_selector.py
tests/unit/repositories/order/: test_in_memory.py  test_sqlite.py
tests/unit/respositories/: test_in_memory_order.py
tests/unit/respositories/order/: test_in_memory.py  test_sqlite.py
tests/unit/routes/: test_orders.py
tests/unit/usecases/: test_create_order.py
tests/usecases/: test_create_order.py
