[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Joshua-Luke Bevan <joshua-luke.bevan@bark.com>"]
readme = "README.md"
packages = [{include = "fastapi_project"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
fixable = ["ALL"]
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 5